验证常量池在1.6的perm generation中，在1.7,1.8中的堆中 验证young generation 中对象晋升年龄在cms，G1收集器中的默认值，及年龄的动态机制